tests/src/frontend/typechecking/invalid/inherit_typeclass_params_mixed1.sk
trait X{x: String}
trait Y(y: String)

class C uses X, Y
